--- a/ClothesSupplyWebCms/appsettings.json
+++ b/ClothesSupplyWebCms/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ClothesSupplyApiUrl": "https://localhost:44385",
+  "ClothesSupplyApiUrl": "https://172.18.30.162",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ClothesSupplyWebCms;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:clothesdbs.database.windows.net,1433;Initial Catalog=aspnet-ClothesSupplyWebCms;Persist Security Info=False;User ID=clothessupply;Password=Clothes123_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
