--- a/ClothesSupplyApi/appsettings.json
+++ b/ClothesSupplyApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProductCatalogDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProductCatalogDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ProductCatalogDbConnection": "Server=tcp:clothesdbs.database.windows.net,1433;Initial Catalog=ProductCatalogDb;Persist Security Info=False;User ID=clothessupply;Password=Clothes123_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
