--- a/ClothesSupplyWebCms/appsettings.json
+++ b/ClothesSupplyWebCms/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ClothesSupplyApiUrl": "https://172.18.30.162",
+  "ClothesSupplyApiUrl": "https://clothessupply-dev-as.azurewebsites.net",
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:clothesdbs.database.windows.net,1433;Initial Catalog=aspnet-ClothesSupplyWebCms;Persist Security Info=False;User ID=clothessupply;Password=Clothes123_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
